--- a/practice.ipynb
+++ b/practice.ipynb
@@ -6,7 +6,7 @@
       "name": "practice.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPUvVifBdSDG6WzLyp4Gies",
+      "authorship_tag": "ABX9TyNRpIxmHgzhVeyocXlcs+K7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3a05d4c-d45d-4b08-b505-1b87c74c0345"
+        "outputId": "809fa41c-e026-497d-a932-317beea9f23f"
       },
       "outputs": [
         {
@@ -49,6 +49,29 @@
       ],
       "source": [
         "print('Hello World')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hello Colab')"
+      ],
+      "metadata": {
+        "id": "ZXnrUdaQtTjQ",
+        "outputId": "626478b2-afbd-4ecf-82ce-26788127e0f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Colab\n"
+          ]
+        }
       ]
     }
   ]
